#210: Fixing wording and typos in inactivity email

--- a/app/views/user_mailer/page_inactivity.html.erb
+++ b/app/views/user_mailer/page_inactivity.html.erb
@@ -14,7 +14,7 @@ Yılmadan paylaşmaya, bağış istemeye devam ettikçe, bağış hedefine ulaş
 <br/>
 Ekte linkini verdiğimiz video ve birkaç blog linklerinin yardımcı olacağına inanıyoruz.<br/>
 <a href="http://blog.benvarim.com/gonullu-bagis-sayfasi-nasil-hazirlanir/">Gönüllü sayfası nasıl hazırlanır? </a><br/>
-<a href="http://vimeo.com/33775867">Bağış sayfanızla başarıyla ulaşmanın sırları</a><br/>
+<a href="http://vimeo.com/33775867">Bağış sayfanızla başarıya ulaşmanın sırları</a><br/>
 <a href="<%=page_url(@page)%>">Sayfanı görüntüle ve paylaş!<a/>
 
 <%=render :partial => "email_layouts/footer" %>
