--- a/app/views/user_mailer/page_inactivity.text.erb
+++ b/app/views/user_mailer/page_inactivity.text.erb
@@ -11,6 +11,6 @@ Yılmadan paylaşmaya, bağış istemeye devam ettikçe, bağış hedefine ulaş
 
 Ekte linkini verdiğimiz video ve birkaç blog linklerinin yardımcı olacağına inanıyoruz.
 Gönüllü sayfası nasıl hazırlanır? http://blog.benvarim.com/gonullu-bagis-sayfasi-nasil-hazirlanir/
-Bağış sayfanızla başarıyla ulaşmanın sırları http://vimeo.com/33775867
+Bağış sayfanızla başarıya ulaşmanın sırları http://vimeo.com/33775867
 Sayfanı görüntüle ve paylaş!<%=page_url(@page)%>
 <%=render :partial => "email_layouts/footer" %>
