Fixing a small DOM error

--- a/app/views/email_layouts/_footer.html.erb
+++ b/app/views/email_layouts/_footer.html.erb
@@ -33,9 +33,7 @@
                 </td>
               </tr>
             </table>
-
-
-
+          </div>
 </td>
 				</tr>
 <tr style="border-collapse: collapse;">
